--- a/templates/load.html
+++ b/templates/load.html
@@ -1,8 +1,11 @@
-loading started at {% total["start_time"] %}<br>
-loading finishing in {% total["passed"] %}, at {% total["end_time"] %}<br><br>
+loading started at {{ total["start_time"] }}<br>
+loading finishing in {{ total["passed"] }}, at {{ total["end_time"] }}<br><br>
 
-retrieving started in {% retrieve["start_time"] %}<br>
-retrieving finishing in {% retrieve["passed"] %}, at {% retrieve["end_time"] %}<br><br>
+retrieving started at {{ retrieve["start_time"] }}<br>
+retrieving finishing in {{ retrieve["passed"] }}, at {{ retrieve["end_time"] }}<br><br>
 
-downloading started in {% download["start_time"] %}<br>
-downloading finishing in {% download["passed"] %}, at {% download["end_time"] %}<br><br>
+downloading started at {{ download["start_time"] }}<br>
+downloading finishing in {{ download["passed"] }}, at {{ download["end_time"] }}<br><br>
+
+building index started at {{ build_index["start_time"] }}<br>
+building index finishing in {{ build_index["passed"] }}, at {{ build_index["end_time"] }}
