--- a/templates/reload.html
+++ b/templates/reload.html
@@ -1,6 +1,6 @@
 {% include "head.html" %}
 <script>
-    axios.get('/api/load', {
+    axios.get('/api/reload', {
         params: {}
     }).then(function (response) {
         let data = response.data;
