--- a/templates/test.html
+++ b/templates/test.html
@@ -6,14 +6,14 @@
         let data = response.data;
         if (response.status === 200) {
             let files = data.files;
-            let container = document.getElementById("files");
-            container.innerHTML = "<ul class= 'list-group'>";
+            let file_list = "<ul class= 'list-group'>";
             files.forEach(function (item, index) {
-                container.innerHTML += `<li class='list-group-item' id='${item.id}'>
+                file_list += `<li class='list-group-item' id='${item.id}'>
                                         <a href='${item.webViewLink}'>${item.name}</a>
                                         </li>`
             });
-            container.innerHTML += "</ul>"
+            file_list += "</ul>";
+            $("#files").html(file_list);
         }
     });
 </script>
