--- a/templates/load.html
+++ b/templates/load.html
@@ -7,8 +7,7 @@
         if (response.status === 200) {
             let loaded = data.loaded;
             let timers = {total: data.total, retrieve: data.retrieve, build_index: data.build_index};
-            $("#load").hide();
-            $("#reload").show();
+            console.log(timers);
         }
     });
 </script>
