--- a/templates/head.html
+++ b/templates/head.html
@@ -13,5 +13,21 @@
             crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/dt-1.10.20/datatables.min.css"/>
+
+    <script type="text/javascript" src="https://cdn.datatables.net/v/dt/dt-1.10.20/datatables.min.js"></script>
     <link rel="stylesheet" href="{{ url_for('static',filename='styles/main.css') }}">
+    <script>
+        $(document).ready(function () {
+            let y = 2020;
+            let curr_y = (new Date()).getFullYear();
+            let footer_html = "Made by Sergey Bakaleynik &#169;"
+            if (curr_y === y) {
+                footer_html += `${y}`;
+            } else {
+                footer_html += `${y}-${curr_y}`;
+            }
+            $("#footer").html(footer_html);
+        })
+    </script>
 </head>
