--- a/templates/index.html
+++ b/templates/index.html
@@ -1,37 +1,12 @@
 {% include "head.html" %}
 {% include "menu.html" %}
 <body>
-<div class="container-fluid">
-    <table>
-        <tbody>
-        <tr>
-            <td><a href="/test">Test an API request</a></td>
-            <td>Submit an API request and see a formatted JSON response. Go through the authorization flow if there are
-                no
-                stored credentials for the user.
-            </td>
-        </tr>
-        <tr>
-            <td><a href="/authorize">Test the auth flow directly</a></td>
-            <td>Go directly to the authorization flow. If there are stored credentials, you still might not be prompted
-                to
-                reauthorize the application.
-            </td>
-        </tr>
-        <tr>
-            <td><a href="/revoke">Revoke current credentials</a></td>
-            <td>Revoke the access token associated with the current user session. After revoking credentials, if you go
-                to
-                the test page, you should see an <code>invalid_grant</code> error.
-            </td>
-        </tr>
-        <tr>
-            <td><a href="/clear">Clear Flask session credentials</a></td>
-            <td>Clear the access token currently stored in the user session. After clearing the token, if you <a
-                    href="/test">test the API request</a> again, you should go back to the auth flow.
-            </td>
-        </tr>
-        </tbody>
-    </table>
-</div>
+<pre class="container-fluid">
+    This application provides you to search through your Google Drive.
+    You can delete all that refers to your query, or delete some item from search result, or just watch result.
+    For working with application you need for login via google.
+    We never use your data and we will provide confidentiality to your data.
+    We only will store index of your files in encrypted way.
+</pre>
+{% include "footer.html" %}
 </body>
