--- a/templates/menu.html
+++ b/templates/menu.html
@@ -2,13 +2,13 @@
 <nav class="nav">
     <a class="nav-link" href="/">Home</a>
 
-    {% if 'credentials' not in session %}
+    {% if not user_loged_in %}
         <a class="nav-link" href="/authorize">Login</a>
     {% else %}
-        <a class="nav-link" href="/search">Search</a>
-        {% if not index_exists() %}
+        {% if not index_exists %}
             <a class="nav-link" id="load" href="/load">Load</a>
         {% else %}
+            <a class="nav-link" href="/search">Search</a>
             <a class="nav-link" id="reload" href="/reload">Reload</a>
         {% endif %}
         {% if debug %}
