--- a/templates/reload.html
+++ b/templates/reload.html
@@ -1,14 +1,17 @@
 {% include "head.html" %}
 <script>
-    axios.get('/api/reload', {
-        params: {}
-    }).then(function (response) {
-        let data = response.data;
-        if (response.status === 200) {
-            let loaded = data.loaded;
-            let timers = {total: data.total, retrieve: data.retrieve, build_index: data.build_index}
-        }
-    });
+    let fl = confirm("Reloading can take much time. Are you sure to reload?");
+    if(fl) {
+        axios.get('/api/reload', {
+            params: {}
+        }).then(function (response) {
+            let data = response.data;
+            if (response.status === 200) {
+                let loaded = data.loaded;
+                let timers = {total: data.total, retrieve: data.retrieve, build_index: data.build_index}
+            }
+        });
+    }
 </script>
 {% include "menu.html" %}
 <div class="container-fluid">
